# fadex

./: .gitignore  Cargo.toml  FutureUpdates.txt  benchmark.py  bs_crawler.py  class_extract.py  fadex_lxml_results.py  pyproject.toml  readme.md  rust_crawler.py
src/: crawler.rs  lib.rs  parser.rs
