[package]
name = "fadex"
version = "0.1.2"
edition = "2021"


description = "A Powerful WebScraper With Unmatched Performance"
license = "MIT"
homepage = "https://github.com/fahad-programmer/fadex"  # Make sure this URL is correct
repository = "https://github.com/fahad-programmer/fadex"  # Make sure this URL is correct


[lib]
name = "fadex"  # Ensure this matches your Python module name
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "stream"] }
scraper = "0.14"
url = "2.3"
dashmap = "5.4"
crossbeam = "0.8"
lazy_static = "1.4"
thiserror = "1.0"

[build-dependencies]
maturin = "0.13"

[features]
default = ["pyo3/extension-module"]
