[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "Fadex"
version = "0.1.4"
description = "A Powerful WebScraper With Unmatched Performance"
readme = "readme.md" 
authors = [{name = "Fahad", email = "malikfahadnawaz@gmail.com"}]
license = "MIT"
homepage = "https://github.com/fahad-programmer/fadex"  
repository = "https://github.com/fahad-programmer/fadex" 
keywords = ["web scraping", "scraper", "async", "performance"] 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
